# grasping_ws

./: .gitignore  README.md
grasp_hardware/grasp_perception/: CMakeLists.txt  package.xml
grasp_hardware/grasp_perception/config/: leap_right.urdf  ur10e.urdf
grasp_hardware/grasp_perception/config/leap_hand/meshes/: fingertip_base_tac3d.stl
grasp_hardware/grasp_perception/debug/example_grasp/sem_MilkCarton_f5b5a24adc6826ace41b639931f9ca1/: scene_cfg.npy
grasp_hardware/grasp_perception/debug/example_grasp/sem_MilkCarton_f5b5a24adc6826ace41b639931f9ca1/generated_grasp/: partial_pc_00_0.npy  partial_pc_00_7.npy  partial_pc_00_9.npy
grasp_hardware/grasp_perception/grasp_perception/: pointcloud_utils.py  tf_utils.py  ur10_kinematics.py
grasp_hardware/grasp_perception/launch/: display_dummy.launch.py  publish_camera_extrinsics.launch.py
grasp_hardware/grasp_perception/rviz/: display_dummy.rviz
grasp_hardware/grasp_perception/test/: test_graspgen_server.py  test_pytorch_kinematics.py
grasp_hardware/leap_ros2/launch/: launch_leap.launch.py
grasp_hardware/lz_gripper_ros2/action/: HandCommand.action
grasp_hardware/lz_gripper_ros2/demo/: demo.py
grasp_hardware/lz_gripper_ros2/drivers/CH341SER_LINUX/driver/: .ch341.o.cmd  .modules.order.cmd  ch341.ko  modules.order
grasp_hardware/lz_gripper_ros2/include/lz_gripper_ros2/: lz_gripper_driver.hpp
grasp_hardware/lz_gripper_ros2/nodes/: test_hand_client.py
grasp_hardware/lz_gripper_rviz/: CMakeLists.txt  package.xml
grasp_hardware/lz_gripper_rviz/launch/: display_dummy.launch.py
grasp_hardware/lz_gripper_rviz/meshes/: base_link.STL  little_link1.STL  little_link2.STL  middle_link1.STL  ring_link1.STL  thumb_link1.STL
grasp_hardware/lz_gripper_rviz/node/: joint_state_publisher.py
grasp_perception/config/: leap.yaml  lz_gripper.yaml  wuxi_right.urdf
grasp_perception/config/leap_hand/meshes/: thumb_fingertip_base_tac3d.stl
grasp_perception/debug/: clicked_points.npz  pointcloud_color.npz
grasp_perception/debug/example_grasp/sem_MilkCarton_f5b5a24adc6826ace41b639931f9ca1/: partial_pc.npy
grasp_perception/debug/example_grasp/sem_MilkCarton_f5b5a24adc6826ace41b639931f9ca1/generated_grasp/: partial_pc_00_1.npy  partial_pc_00_2.npy  partial_pc_00_8.npy
grasp_perception/grasp_perception/: leap_hand_utils.py
grasp_perception/rviz/: debug_ik.rviz
grasp_perception/scripts/: main_grasp_client.py
grasp_perception/test/: test_leap_grasp.py  test_sam2_server.py
leap_ros2/scripts/: leaphand_node.py
lz_gripper_ros2/: README.md  package.xml  plugin_description.xml  setup.py
lz_gripper_ros2/drivers/CH341SER_LINUX/driver/: .ch341.mod.cmd  ch341.mod.c
lz_gripper_ros2/launch/: lz_gripper.launch.py
lz_gripper_ros2/nodes/: hand_controller_node.py
lz_gripper_ros2/src/: lz_gripper_driver.cpp  lz_gripper_node.cpp
lz_gripper_rviz/: __init__.py
lz_gripper_rviz/launch/: display.launch.py
lz_gripper_rviz/meshes/: middle_link2.STL  thumb_link3.STL
lz_gripper_rviz/urdf/launch/: gazebo.launch
src/ft_leap/: CMakeLists.txt  package.xml
src/ft_leap/launch/: launch_leap.py
src/ft_leap/scripts/: FT_client.py  FT_client.py.old  FT_setting_editor.py  leapnode_FT.py  leapnode_FT_topics.py  leapnode_FT_topics_interp.py  syncWriteTry.py  writeTry.py
src/grasp_control/: package.xml  setup.py
src/grasp_control/grasp_control/: joint_state_forwarder.py  moveit_utils.py  tf_utils.py
src/grasp_control/launch/: robot_bringup.launch.py  ur_control_new.launch.py
src/grasp_hardware/grasp_perception/config/leap_hand/meshes/: fingertip_tac3d.stl
src/grasp_hardware/grasp_perception/grasp_perception/: rtde_client.py  sam_utils.py
src/grasp_hardware/grasp_perception/scripts/: perception_node.py  planning_node.py
src/grasp_hardware/lz_gripper_ros2/: CMakeLists.txt  __init__.py
src/grasp_hardware/lz_gripper_ros2/drivers/CH341SER_LINUX/: README.md
src/grasp_hardware/lz_gripper_ros2/drivers/CH341SER_LINUX/driver/: .Module.symvers.cmd  .ch341.ko.cmd  .ch341.mod.o.cmd
src/grasp_hardware/lz_gripper_ros2/srv/: ServerMsg.srv
src/grasp_hardware/lz_gripper_rviz/config/: display.rviz  joint_names_right.yaml
src/grasp_hardware/lz_gripper_rviz/meshes/: index_link1.STL  index_link2.STL  ring_link2.STL  thumb_link2.STL
src/grasp_hardware/lz_gripper_rviz/urdf/: right.csv
src/grasping_control/: CMakeLists.txt  package.xml
src/grasping_control/cfg/: ur5_calibration.yaml
src/grasping_control/grasping_control/: robot_real.py  tf_utils.py
src/grasping_control/launch/: real_prepare.launch.py  rviz_vis.launch.py
src/grasping_control/msg/: Action.msg  State.msg
src/grasping_control/rviz/: vis.rviz
src/grasping_control/scripts/: joint_state_forwarder.py  main_grasping.py  main_robot_real_high_freq.py
src/grasping_perception/: package.xml  setup.cfg  setup.py
src/grasping_perception/grasping_perception/: detection.py  grasp_pose_sampler.py  grasp_pose_sampler_test.py  joint_state_publish_test.py  object_pointcloud_publisher.py  table_frame_publisher.py  utils.py
src/grasping_perception/launch/: object_detection.launch.py
src/ur5leap_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5leap_moveit_config/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur5_leap_classic.ros2_control.xacro  ur5_leap_classic.srdf  ur5_leap_classic.urdf.xacro
src/ur5leap_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ur_irm_grasp/: CMakeLists.txt  package.xml
src/ur_irm_grasp/assets/ur5_leap_classic/: ur5_leap_classic.urdf
src/ur_rtde/ur_rtde_msgs/: CMakeLists.txt  package.xml
src/ur_rtde/ur_rtde_ros2/: CMakeLists.txt  package.xml
src/ur_rtde/ur_rtde_ros2/launch/: ur_ros2_node.launch.py
src/ur_rtde/ur_rtde_ros2/scripts/: ur_ros2_node.py  ur_rtde.py
src/ur_rtde/ur_rtde_ros2/tests/: ur_ros2_test.py  ur_rtde_connect_check.py
(+4 files in other folders)
